checking in version 1.6.  DOB dialog box pops up if DOB is not valid...also added another output to csv file that Marie requested
git-svn-id: https://citdcbmipav.cit.nih.gov/repos-pub/mipav@4760 ba61647d-9d00-f842-95cd-605cb4296b96